# spectrail

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
plans/: api-key-settings-plan.md  restore_settings_plan.md  spectrail-implementation-plan.md  sprint-1-checklist.md  sprint-1-spec.md  sprint-2-spec.md  sprint-3-spec.md  sprint-4-spec.md  sprint-5-spec.md  sprint-6-spec.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 001_init.sql  002_settings.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  lib.rs.bak  main.rs  models.rs
src-tauri/src/llm/: client.rs  types.rs
src-tauri/src/repo_tools/: dispatcher.rs  fs.rs  git.rs  logging.rs  mod.rs  runner.rs  safety.rs  schemas.rs  search.rs
src-tauri/src/workflows/: mod.rs  plan.rs  verify.rs
src/components/: ToolCallList.tsx
src/lib/: api.ts  types.ts
src/routes/: ProjectDetail.tsx  Projects.tsx  RunDetail.tsx  Settings.tsx  TaskDetail.tsx
src/ui/: AppLayout.tsx  CopyAction.tsx  PageHeader.tsx  SectionCard.tsx  index.ts
