[package]
name = "spectrail"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "spectrail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["macros", "serde", "formatting"] }

# Sprint 3: LLM client and repo tools
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
backoff = { version = "0.4", features = ["tokio"] }

# Sprint 3: Repo tools
ignore = "0.4"
which = "6"
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
